--- a/FOAEA3.Admin.Web/Pages/Shared/_Layout.cshtml
+++ b/FOAEA3.Admin.Web/Pages/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="" asp-page="/Tools/SimulateSinConfirmation">Simulate Sin Confirmation</a>
                                 <a class="dropdown-item" asp-area="" asp-page="/Tools/SimulateIncomingTracingResults">Simulate Incoming Trace Results</a>
+                                <a class="dropdown-item" asp-area="" asp-page="/Tools/VerifyAPIs">Verify APIs</a>
                             </div>
                         </li>
                     </ul>
